<resources>
    <string name="app_name">PocketFridge</string>
    <string name="title_fridge">Fridge</string>
    <string name="title_zerowastage">Zero Wastage</string>
    <string name="title_shoppinglist">Shopping List</string>
    <string name="title_settings">Settings</string>
    <string name="title_allrecipes">All Recipes</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>