<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_allrecipes"
        android:icon="@drawable/ic_baseline_allrecipes_24"
        android:title="@string/title_allrecipes" />
    <item
        android:id="@+id/navigation_zerowastage"
        android:icon="@drawable/ic_baseline_zerowastage_24"
        android:title="@string/title_zerowastage" />
    <item
        android:id="@+id/navigation_fridge"
        android:icon="@drawable/ic_baseline_fridge_24"
        android:title="@string/title_fridge" />
    <item
        android:id="@+id/navigation_shoppinglist"
        android:icon="@drawable/ic_baseline_shoppinglist_24"
        android:title="@string/title_shoppinglist" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />


</menu>