<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_fridge">

    <fragment
        android:id="@+id/navigation_fridge"
        android:name="com.example.pocketfridge.ui.fridge.FridgeFragment"
        android:label="@string/title_fridge"
        tools:layout="@layout/fragment_fridge" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.pocketfridge.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_zerowastage"
        android:name="com.example.pocketfridge.ui.zerowastage.ZeroWastageFragment"
        android:label="@string/title_zerowastage"
        tools:layout="@layout/fragment_zerowastage" />

    <fragment
        android:id="@+id/navigation_shoppinglist"
        android:name="com.example.pocketfridge.ui.shoppinglist.ShoppingListFragment"
        android:label="@string/title_shoppinglist"
        tools:layout="@layout/fragment_shoppinglist" />
    <fragment
        android:id="@+id/navigation_allrecipes"
        android:name="com.example.pocketfridge.ui.allrecipes.AllRecipesFragment"
        android:label="@string/title_allrecipes"
        tools:layout="@layout/fragment_allrecipes" />

</navigation>